# playgrounds

./: .gitignore  README.md
Abstract-Virtual/: abstract.cc
Android-Files-App/: Files.sh
BarnsleyFern/: script.js
Bash-Find-Duplicates/: find-duplicates.sh
C++-Arrow-Operator/: .gitignore
C++-String-Trim/: Makefile
C++-String-Trim/src/: main.cxx
C++-Visitor/: Makefile  main.cxx
C++/C++-Algorithms/: Makefile  permute.c++  reverse.c++  shuffle.c++  vector_fn.h++
C++/C++-Arrow-Operator/: Makefile  main.cxx
C++/C++-String-Trim/: test.sh
C++/C++ArduboySpaceShooter/: Ship.ino  bitmaps.h  makefile  ship.cpp  ship.h
C++/C++Empty/: Makefile  main.cxx
C++/CMake-1/: .gitignore  CMakeLists.txt
C++/CMake-1/include/glad/: gl.h
C++/CMake-1/src/: app.cxx  app.hxx  main.cxx
C++/Chess-Example/: Makefile
C++/ConstexprIfDebug/: .gitignore  Makefile  main.c++
C++/ExampleRPG/: .gitignore  README.md  colors.hpp  intro.cpp  intro.hpp  main.cpp  makefile  player.cpp  player.hpp
C++/OpenGLCubeFF/: Makefile  main.cxx
C++/OpenGLSandbox/: .gitignore
C++/SortCallback/: Sort.cc  makefile  sort
C++/visitors/: Makefile
C++ArduboySpaceShooter/: .gitignore  README.md  game.cpp  game.h
C++ArduboySpaceShooter/Art/: Sprites.xcf
C/FillMemory/: makefile
C/FunctionPointer/: makefile
C/GameGenie/: makefile
C/XLibExercises/: .gitignore  makefile
CSSColors/: csscolors.js  main.js  styles.css
CSharp/CSTreeFractal/: .gitignore  README.md  TreeFractal.sln
Chess-Example/: main.cxx
ConsoleWin32/: Makefile
ConsoleWin32/src/: debug_unix.hxx  debug_win.cxx  debug_win.hxx
CountLetters/: README.md
CountLetters/c/: makefile
CountLetters/nodets/: package.json  tsconfig.json
CountLetters/python/: countchars.py
FillMemory/: fillmem.c
FunctionPointer/: fptr.c
GameGenie/: README.md  fceuxgg.c
GemHunter/: README.md  cartesian.js  entity.js  game.js  index.html  input.js
IIFEs/: .gitignore  MANIFEST.MF  iife.js  makefile
JSAsteroids/: README.md
JSBallInBox/: README.md
JSBallInBox2/: script.js
JSCanvasTemplate/: application.js  index.html  input.js  styles.css  timer.js
JSCollide/: README.md  collide.html  math.js  point.js
JSComplexGraphing/: grapher.js
JSEngine/: jscanvas  makefile
JSEngine/js/: test.js
JSJapaneseKanji/: .gitignore  kyouiku.html  styles.css
JSJapaneseKanji/json/: JapaneseVerbs.json  JapaneseWords.json  JapaneseWordsBasic.json  kyouiku.json
JSJapaneseKanji/scripts/: kyouikuPlus.js
JSJapaneseKanji/scripts-node/: mapVerbs.js
JSJapaneseKanji/scripts-webdev/: jouyouKanjiList.js
JSLife/: drawhdl.js  inputhdl.js  looper.js  plant.js  utils.js
JSPlotter/: README.md  graph.css  graph.html  graph.js
JSPolygon/css/: styles.css
JSRainbow/: README.md
JSStopWatch/: README.md
JSTreeFractal/: index.html
JSTreeFractal/src/: loop.js  tree.js
JSWander3D/: block.js  camera.js  input.js  main.js  point.js
JSWebDraw/: test.js  utils.js
Java/J2V8/: V8Example.java
Java/JavaPolyominoes/: build.xml
JavaPolyominoes/: README.md  run.sh
JavaScript/BarnsleyFern/: index.html
JavaScript/BouncingBalls/: ball.js  index.html  main.js  math.js  styles.css
JavaScript/CSSColors/: index.html
JavaScript/GemHunter/: main.js  player.js  styles.css  timer.js  utils.js
JavaScript/JSBallInBox2/: index.html  (+1 more)
KotlinPolyominoes/: .gitignore
Lisp/: unicode.lisp
MIDIASM/: Test.hex  Test.mid  Test2.mid  fi
MMBN2WData/: add_csv_to_db.sql  giga_chips.csv  mega_chips.csv  run.sh
MultiCubes/: index.html  styles.css
OCamlRainbow/: rainbow.ml
OSConfig/: .gitignore  README.md  genlinks.sh
OSConfigChromeOS/: README.md
OSConfigDebian/: .gitignore  README.md
OSConfigPS/: Profile.ps1
OSConfigRaspbian/: README.md
OSConfigWindows/: README.md
OpenGLSDL3Test/: .gitignore  Makefile
OpenGLSandbox/: README.md
PSMinecraftObjects/: ExtractMCObjects.ps1
Perl-REPL/: repl.pl
Pseudo-Maze/: pmaze.sh
PyLife/: .gitignore  draw_handler.py  entity_handler.py  game.py  plant.py  velocity.py
RainbowCube/: index.html  script.js
RainbowCube2/: index.html
SortCallback/: Person.cc  Person.hh
StringArt/: index.html  script.js
TSAudioKeyboard/: index.html  tsconfig.json
TSCanvasTweaks/: README.md  index.html
TSSpaceShooter/: README.md  index.html  tsconfig.json
ThreadBunny/: bunny.c  makefile
TreeFractal/: main.js
Ubuntu-Setup/: bashrc.sh  dircolors  gitconfig  grub  profile.sh  setup.sh  vimrc.vim
Ubuntu-Setup-Old/: bash_profile.bash  bash_prompts.powerline.bash  emacs.el  vimrc.vim
WebGL-Triangles/: .gitignore
WebGPU-Shader/: animate.js
WebGPUExample/: default.wgsl  graphics.js  main.js  utils.js
XLibExercises/: README.md
YuGiOh-Cards-Old/: .gitignore  collectids.py  montage.sh
YuGiOhCards/: cache_my_images.rb  generate_my_cards.rb  get_images.rb  get_json.sh
const-ptr/: Makefile  main.cxx  test
little-alchemy/: automaton-devtools.js
lua-stuff/: example1.lua
macOS-Terminal-Setup/: .bash_colors  .vimrc
rainbow-circles/: script.js  styles.css
(+351 files in other folders)
